cluster/core/flux-system/weave-gitops/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: weave-gitops
  namespace: flux-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`gitops.${SECRET_DOMAIN}`) && PathPrefix(`/`)"
      middlewares:
        - name: security-header
          namespace: networking
      services:
        - kind: Service
          name: weave-gitops
          namespace: flux-system
          port: 9001
  tls:
    secretName: "${SECRET_DOMAIN}-tls"
